# openfga-rust-sdk

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: no_credentials.rs
src/: error.rs  lib.rs
src/api/: api_client.rs  configuration.rs  executor.rs  mod.rs
src/client/: mod.rs
src/credentials/: mod.rs
src/internal/: constants.rs  mod.rs  retry.rs  ulid.rs
src/models/: assertion.rs  authorization_model.rs  batch_check.rs  check.rs  consistency.rs  contextual_tuples.rs  error_codes.rs  expand.rs  list_objects.rs  list_users.rs  misc.rs  mod.rs  read.rs  store.rs  tuple.rs  userset.rs  write.rs
src/oauth2/: mod.rs
src/streaming/: mod.rs
src/telemetry/: mod.rs
tests/: client_test.rs  internal_test.rs
